src/objects/PartnerAccount__c.object
<CustomObject>
    <description>Account Partner Functions</description>
    <fields>
        <fullName>PTR_Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Accounts</relationshipLabel>
        <relationshipName>PartnerAccounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PTR_PartnerAccount__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Accounts (Partner Account)</relationshipLabel>
        <relationshipName>PartnerAccounts1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PTR_PartnerType__c</fullName>
        <globalPicklist>AccountPartnerType</globalPicklist>
        <label>Partner Type</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PTR_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick this box if the related Account is the primary Partner. Please note you can have only 1 primary account per partner type.</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <label>Partner Account</label>
    <nameField>
        <displayFormat>PTR-{000000}</displayFormat>
        <label>Partner Account ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>